# unsecured_paths

./: .gitignore  Check777.cabal  DirectoryTree.hs  Main.hs  TestData.hs  UnsecuredCheck.hs  Utils.hs  Vagrantfile  stack.yaml  unsecured-paths.cabal
Test/b/2/3/: .htaccess
Utils/: Par.hs  Test.hs
lib/: DirectoryTree.hs  HtaccessCheck.hs  Utils.hs
res/: block_executable_files
test/: Spec.hs  one_nested_set_of_bad_dirs  setup_test_dirs  two_nested_sets_of_bad_dirs  two_nested_sets_of_bad_dirs_expected
test/cases/: can_protect_directories_one_level_up  one_match_no_problems  one_nested_set_of_bad_dirs_expected  prevent_a1_being_categorised_as_subfolder_of_a_expected
test/dirs/can_protect_directories_one_level_up/protector/: .htaccess
test/dirs/one_match_no_problems/a/: .htaccess
