name:                 Check777
version:              1.0.0
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               connrs
maintainer:           paul.connolley@gmail.com
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable unsecured_paths
  main-is:              Main.hs
  other-modules: DirectoryTree
               , Utils
               , HtaccessCheck
               , UnsecuredCheck
  build-depends: base >= 4.7 && < 5
               , text
               , file-embed
               , directory
               , parallel
               , monad-parallel
  hs-source-dirs: .
  default-language: Haskell2010
  ghc-options: -O2

library
    build-depends: base >= 4.7 && < 5
                 , text
                 , file-embed
                 , directory
                 , parallel
                 , monad-parallel
                 , HUnit
    hs-source-dirs: .
    exposed-modules: DirectoryTree
                   , Utils
                   , Utils.Test
                   , HtaccessCheck
                   , UnsecuredCheck
    default-language: Haskell2010

test-suite check777_test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      ., test
  main-is:             Spec.hs
  build-depends:       base
                     , text
                     , file-embed
                     , directory
                     , HUnit
                     , Check777
  other-modules: DirectoryTree
                 , Utils
                 , Utils.Test
                 , HtaccessCheck
                 , UnsecuredCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010