name:                 unsecured-paths
version:              1.0.1
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               connrs
maintainer:           paul.connolley@gmail.com
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable unsecured_paths
  main-is:            Main.hs
  other-modules:      DirectoryTree
                    , HtaccessCheck
                    , UnsecuredCheck
                    , Utils
                    , Utils.Par
  build-depends:      base >= 4.7 && < 5
                    , directory
                    , file-embed
                    , monad-par
                    , parallel
                    , text
  hs-source-dirs:     .
                    , lib
  default-language:   Haskell2010
  ghc-options:        -O2

library
  build-depends:      base >= 4.7 && < 5
                    , directory
                    , file-embed
                    , monad-par
                    , parallel
                    , text
                    , HUnit
  hs-source-dirs:     .
                    , lib
  exposed-modules:    DirectoryTree
                    , HtaccessCheck
                    , UnsecuredCheck
                    , Utils
                    , Utils.Test
  default-language:   Haskell2010

test-suite unsecured-paths_test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     .
                    , lib
                    , test
  main-is:            Spec.hs
  build-depends:      base
                    , directory
                    , file-embed
                    , monad-par
                    , text
                    , unsecured-paths
                    , HUnit
  other-modules:      DirectoryTree
                    , HtaccessCheck
                    , UnsecuredCheck
                    , Utils
                    , Utils.Par
                    , Utils.Test
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  default-language:   Haskell2010
